<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PesoSecoActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/buttonUmidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:clickable="true"
        android:text="@string/btn_umidade"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonSeco"
        app:layout_constraintEnd_toStartOf="@+id/buttonSeco"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSeco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="5dp"
        android:clickable="false"
        android:text="@string/btn_seco"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/buttonResult"
        app:layout_constraintEnd_toStartOf="@+id/buttonVolume"
        app:layout_constraintStart_toEndOf="@+id/buttonUmidade" />

    <Button
        android:id="@+id/buttonResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/btn_resultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonVolume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:text="@string/btn_volume"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonSeco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSeco" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="Determinação da umidade"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editUmidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:ems="10"
        android:hint="Solo úmido + tara(g)"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editSeca"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:ems="10"
        android:hint="Tara(g)"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUmidade" />

    <TextView
        android:id="@+id/textAgua"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="Água: "
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textUmidade"
        app:layout_constraintStart_toStartOf="@+id/textUmidade"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />


    <TextView
        android:id="@+id/textUmidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="Umidade%/Speedy: "
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnCalcular"
        app:layout_constraintStart_toStartOf="@+id/buttonUmidade"
        app:layout_constraintTop_toBottomOf="@+id/textAgua" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:onClick="btnCalcular"
        android:text="@string/btn_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSeca" />

    <TextView
        android:id="@+id/txtWarn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="false"
        android:text="Por favor complete todos os campos"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>